# ERA4

./: .gitignore  README.md
session-13/: README.md  pyproject.toml
session-13/assets/: first-run-stdout.txt  second-run-stdout.txt
session-13/scripts/: train.py  verify.py  version_0.yaml  version_1.yaml
session-13/src/session_13/: __init__.py  model.py  trainer.py
session-14/: README.md  pyproject.toml
session-14/assets/: training-stdout.txt
session-14/scripts/: generate.py  train.py  version_0.yaml
session-14/src/session_14/: __init__.py  datamodule.py  model.py  trainer.py
session-15/: .gitignore  README.md  pyproject.toml
session-15/assets/: version_0_stdout.txt  version_1_stdout.txt  version_2_stdout.txt  version_3_stdout.txt
session-15/scripts/: infer.py  lr_find.py  plot_logs.py  train.py  version_0.yaml  version_1.yaml  version_2.yaml  version_3.yaml
session-15/src/session_15/: __init__.py  dataset.py  loss_fn.py  model.py
session-16/: README.md  pyproject.toml
session-16/assets/: experiment_1.yaml  experiment_2.yaml  experiment_3.yaml
session-16/scripts/: bellman_equation_showcase.py  cityrl.py
session-16/src/session_16/: __init__.py
session-16/src/session_16/cityrl/: brain.py  common.py  dashboard.py  logs.py  map.py  recorder.py  world.py
session-17/: README.md  pyproject.toml
session-17/assets/: experiment_1.yaml  experiment_1_continuous.yaml  experiment_2_continuous.yaml  experiment_3_continuous.yaml
session-17/src/session_17/: __init__.py  __main__.py  continuous_env.py  discrete_env.py  dpg_utils.py  gui.py  rendering.py  trainer.py
session-5/: README.md  pyproject.toml
session-5/notebooks/: notebook.ipynb
session-6/: README.md  pyproject.toml
session-6/notebooks/: model_1.ipynb  model_2.ipynb  model_3.ipynb  model_4.ipynb
session-6/src/session_6/: __init__.py  model_1.py  model_2.py  model_3.py  model_4.py  train.py
session-7/: README.md  pyproject.toml
session-7/notebooks/: data-exploration.ipynb  model_1.ipynb  model_2.ipynb  model_3.ipynb  model_4.ipynb
session-7/src/session_7/: __init__.py  common.py  dataloader.py  metrics.py  model_1.py  model_2.py  model_3.py  model_4.py  utils.py
session-8/: README.md  pyproject.toml
session-8/notebooks/: training.ipynb
session-8/src/session_8/: __init__.py  datamodule.py  metrics.py  model.py
session-9/: .gitignore  README.md  pyproject.toml
session-9/scripts/: example_config.yaml  main.py  plot_logs.py  version_0.yaml  version_1.yaml  version_2.yaml
session-9/src/era4_mini_capstone/: __init__.py  datamodule.py  model.py
