[project]
name = "session-13"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "firekind", email = "shyamant.achar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jsonargparse[signatures]>=4.27.7",
    "lightning>=2.5.6",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]
