[project]
name = "session-14"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonargparse[signatures]>=4.44.0",
    "lightning>=2.6.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
