[project]
name = "session-16"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "firekind", email = "shyamant.achar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.10.1",
    "torch>=2.9.1",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
