[project]
name = "session-8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "firekind", email = "shyamant.achar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
