[project]
name = "era4-mini-capstone"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "jsonargparse[signatures]>=4.27.7",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
    { index = "torch-cuda", marker = "platform_system == 'Linux'" },
    { index = "torch-cuda", marker = "platform_system == 'Windows'" },
]
torchvision = [
    { index = "torch-cuda", marker = "platform_system == 'Linux'" },
    { index = "torch-cuda", marker = "platform_system == 'Windows'" },
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
